--- a/app/src/main/res/layout/activity_products_desc.xml
+++ b/app/src/main/res/layout/activity_products_desc.xml
@@ -12,17 +12,7 @@
         android:orientation="horizontal"
         android:layout_weight="2">
         <ImageView
-            android:id="@+id/desc_pimg"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1"
-            tools:srcCompat="@tools:sample/avatars[0]" />
-        <ImageView
-            android:id="@+id/desc_pimg1"
+            android:id="@+id/ivFoodImage"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
@@ -32,6 +22,7 @@
             android:layout_weight="1"
             tools:srcCompat="@tools:sample/avatars[0]" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -39,11 +30,17 @@
         android:layout_weight="3"
         android:orientation="vertical">
     <TextView
-        android:id="@+id/desc_pnames" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="TextView" android:textSize="30sp" />
-    <TextView android:id="@+id/desc_brand" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="TextView" android:textSize="18sp" />
-    <TextView android:id="@+id/desc_pdesc" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="TextView" android:textSize="18sp" />
-    <TextView android:id="@+id/desc_price" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="TextView" android:textSize="24sp" />
-</LinearLayout>
+        android:id="@+id/tvFoodName" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="TextView" android:textSize="30sp" />
+    <TextView android:id="@+id/tvFoodID" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="TextView" android:textSize="18sp" />
+    <TextView android:id="@+id/tvFoodCountry" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="TextView" android:textSize="18sp" />
+    <TextView android:id="@+id/tvFoodUnit" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="TextView" android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/tvFoodQuantity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+    </LinearLayout>
 
 
 </LinearLayout>
