--- a/app/src/main/res/layout/activity_products_desc.xml
+++ b/app/src/main/res/layout/activity_products_desc.xml
@@ -30,8 +30,21 @@
         android:layout_weight="3"
         android:orientation="vertical">
     <TextView
-        android:id="@+id/tvFoodName" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="TextView" android:textSize="30sp" />
-    <TextView android:id="@+id/tvFoodID" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="TextView" android:textSize="18sp" />
+        android:id="@+id/tvFoodName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:text="TextView"
+        android:textSize="30sp" />
+    <TextView
+        android:id="@+id/tvFoodID"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp" android:text="TextView" android:textSize="18sp" />
     <TextView android:id="@+id/tvFoodCountry" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="TextView" android:textSize="18sp" />
     <TextView android:id="@+id/tvFoodUnit" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="TextView" android:textSize="24sp" />
 
