--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,8 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView android:id="@+id/img_products" android:layout_width="100dp" android:layout_height="100dp" />
-    <TextView android:id="@+id/txt_pname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="Demo" android:textSize="30sp" />
+    <ImageView
+        android:id="@+id/ivImgs"
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
+
+    <TextView android:id="@+id/tvContent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Demo"
+        android:textSize="20sp" />
 
 
 </LinearLayout>
