--- a/app/src/main/res/layout/activity_search_list.xml
+++ b/app/src/main/res/layout/activity_search_list.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".searchList">
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
+    <SearchView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        tools:layout_editor_absoluteX="126dp"
-        tools:layout_editor_absoluteY="38dp" />
-</android.support.constraint.ConstraintLayout>
+        android:id="@+id/mySearchView"
+        android:text="SearchBar"
+        android:queryHint="Search"
+        android:textAlignment="center"
+        />
+    <ListView
+        android:id="@+id/lst_products"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
